infra/k8s/amenity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amenity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amenity-service
  template:
    metadata:
      labels:
        app: amenity-service
    spec:
      containers:
      - name: amenity-service
        image: shreyas900/amenity-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: amenity-service
spec:
  selector:
    app: amenity-service
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
