infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amenity-booking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              number: 80
      - path: /api/amenities
        pathType: Prefix
        backend:
          service:
            name: amenity-service
            port:
              number: 80
      - path: /api/login
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/register
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/session
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
      - path: /api/availability
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
